sidebar active class and color add accolades config

--- a/public/view/m-region/add-region.ejs
+++ b/public/view/m-region/add-region.ejs
@@ -316,13 +316,13 @@
                       <div class="col-xl-6">
                         <label for="accolades" class="form-label">
                           Accolades Configuration
-                          <!-- <a href="/r/add-region"> -->
-                            <!-- <button
+                           <a href="/acc/add-accolades">
+                            <button
                               type="button"
                               class="btn btn-outline-danger btn-sm"
                             >
                               Add Accolade +
-                            </button> -->
+                            </button> 
                           </a>
                         </label>
 
