--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -68,7 +68,7 @@
 
               <!-- Start::slide -->
               <li class="slide">
-                <a href="/d/ro-dashboard" class="side-menu__item">
+                <a href="/d/ro-dashboard" class="side-menu__item dashboard-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -90,7 +90,7 @@
 
               <!-- Start::slide -->
               <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item">
+                <a href="javascript:void(0);" class="side-menu__item universal-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -123,7 +123,7 @@
 
                             <!-- Start::slide -->
                             <li class="slide has-sub">
-                              <a href="javascript:void(0);" class="side-menu__item">
+                              <a href="javascript:void(0);" class="side-menu__item region-menu">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
                                   class="w-6 h-6 side-menu__icon"
@@ -161,7 +161,7 @@
               
                             <!-- Start::slide -->
                             <li class="slide has-sub">
-                              <a href="javascript:void(0);" class="side-menu__item">
+                              <a href="javascript:void(0);" class="side-menu__item chapter-menu">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
                                   class="w-6 h-6 side-menu__icon"
@@ -199,7 +199,7 @@
               
                             <!-- Start::slide -->
                             <li class="slide has-sub">
-                              <a href="javascript:void(0);" class="side-menu__item">
+                              <a href="javascript:void(0);" class="side-menu__item member-menu">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
                                   class="w-6 h-6 side-menu__icon"
@@ -236,7 +236,7 @@
                             <!-- End::slide -->
 
                             <li class="slide has-sub">
-                              <a href="javascript:void(0);" class="side-menu__item">
+                              <a href="javascript:void(0);" class="side-menu__item transaction-menu">
                                   <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 side-menu__icon" fill="none" viewbox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                       <path stroke-linecap="round" stroke-linejoin="round" d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z"></path>
                                   </svg>
@@ -252,9 +252,47 @@
                               </ul>
                           </li>
 
+                                                           <!-- Start::slide -->
+                                                           <li class="slide has-sub">
+                                                            <a href="javascript:void(0);" class="side-menu__item accolade-menu">
+                                                              <svg
+                                                              xmlns="http://www.w3.org/2000/svg"
+                                                              class="w-6 h-6 side-menu__icon"
+                                                              fill="none"
+                                                              viewbox="0 0 24 24"
+                                                              stroke-width="1.5"
+                                                              stroke="currentColor"
+                                                            >
+                                                              <path
+                                                                stroke-linecap="round"
+                                                                stroke-linejoin="round"
+                                                                d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 0 0 2.25-2.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v2.25A2.25 2.25 0 0 0 6 10.5Zm0 9.75h2.25A2.25 2.25 0 0 0 10.5 18v-2.25a2.25 2.25 0 0 0-2.25-2.25H6a2.25 2.25 0 0 0-2.25 2.25V18A2.25 2.25 0 0 0 6 20.25Zm9.75-9.75H18a2.25 2.25 0 0 0 2.25-2.25V6A2.25 2.25 0 0 0 18 3.75h-2.25A2.25 2.25 0 0 0 13.5 6v2.25a2.25 2.25 0 0 0 2.25 2.25Z"
+                                                              ></path>
+                                                            </svg>
+                                                              <span class="side-menu__label"
+                                                                >Accolades <br />
+                                                                Management</span
+                                                              >
+                                                              <i class="ri-arrow-down-s-line side-menu__angle"></i>
+                                                            </a>
+                                                            <ul class="slide-menu child1">
+                                                              <li class="slide">
+                                                                <a href="/acc/manage-accolades" class="side-menu__item"
+                                                                  >View All Accolades</a
+                                                                >
+                                                              </li>
+                                                              <li class="slide">
+                                                                <a href="/acc/add-accolades" class="side-menu__item"
+                                                                  >Add New Accolade</a
+                                                                >
+                                                              </li>
+                                                            </ul>
+                                                          </li>
+                                                          <!-- End::slide -->
+
               <!-- Start::slide -->
               <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item">
+                <a href="javascript:void(0);" class="side-menu__item supplies-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -289,50 +327,9 @@
                 </ul>
               </li>
               <!-- End::slide -->
-
-                                 <!-- Start::slide -->
-                                 <li class="slide has-sub">
-                                  <a href="javascript:void(0);" class="side-menu__item">
-                                    <svg
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    class="w-6 h-6 side-menu__icon"
-                                    fill="none"
-                                    viewbox="0 0 24 24"
-                                    stroke-width="1.5"
-                                    stroke="currentColor"
-                                  >
-                                    <path
-                                      stroke-linecap="round"
-                                      stroke-linejoin="round"
-                                      d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 0 0 2.25-2.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v2.25A2.25 2.25 0 0 0 6 10.5Zm0 9.75h2.25A2.25 2.25 0 0 0 10.5 18v-2.25a2.25 2.25 0 0 0-2.25-2.25H6a2.25 2.25 0 0 0-2.25 2.25V18A2.25 2.25 0 0 0 6 20.25Zm9.75-9.75H18a2.25 2.25 0 0 0 2.25-2.25V6A2.25 2.25 0 0 0 18 3.75h-2.25A2.25 2.25 0 0 0 13.5 6v2.25a2.25 2.25 0 0 0 2.25 2.25Z"
-                                    ></path>
-                                  </svg>
-                                    <span class="side-menu__label"
-                                      >Accolades <br />
-                                      Management</span
-                                    >
-                                    <i class="ri-arrow-down-s-line side-menu__angle"></i>
-                                  </a>
-                                  <ul class="slide-menu child1">
-                                    <li class="slide">
-                                      <a href="./manage-accolades.html" class="side-menu__item"
-                                        >View All Accolades</a
-                                      >
-                                    </li>
-                                    <li class="slide">
-                                      <a href="./add-accolades.html" class="side-menu__item"
-                                        >Add New Accolade</a
-                                      >
-                                    </li>
-                                  </ul>
-                                </li>
-                                <!-- End::slide -->
-
-
-
                                                  <!-- Start::slide -->
                  <li class="slide has-sub">
-                  <a href="javascript:void(0);" class="side-menu__item">
+                  <a href="javascript:void(0);" class="side-menu__item inventory-menu">
                     <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -374,7 +371,7 @@
 
               <!-- Start::slide -->
               <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item">
+                <a href="javascript:void(0);" class="side-menu__item e&t-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -409,7 +406,7 @@
 
               <!-- Start::slide -->
               <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item">
+                <a href="javascript:void(0);" class="side-menu__item visitor-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -444,7 +441,7 @@
 
               <!-- Start::slide -->
               <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item">
+                <a href="javascript:void(0);" class="side-menu__item expenses-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -479,7 +476,7 @@
 
               <!-- Start::slide -->
               <li class="slide">
-                <a href="./kitty-dashboard.html" class="side-menu__item">
+                <a href="./kitty-dashboard.html" class="side-menu__item kitty-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -502,7 +499,7 @@
 
               <!-- Start::slide -->
               <li class="slide">
-                <a href="./add-notification.html" class="side-menu__item">
+                <a href="./add-notification.html" class="side-menu__item notification-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -584,6 +581,87 @@
       <!-- End Main-Sidebar-->
 
       <!-- <script src="../../assets/js/sidebar.js"></script> -->
+
+      <style>
+        /* Highlight active menu */
+.side-menu__item.active {
+  color: floralwhite;
+  background-color: #007bff;
+}
+
+/* Open dropdown menu */
+.slide-menu.open {
+  display: block;
+}
+
+
+      </style>
+
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+  const currentPath = window.location.pathname;
+
+  // Map menu items to their parent menu
+  const menuMapping = {
+    "/d/ro-dashboard": ".dashboard-menu",
+    "/r/manage-region": ".region-menu",
+    "/r/add-region": ".region-menu",
+    "/r/edit-region": ".region-menu",
+    "/r/view-region": ".region-menu",
+    "/c/manage-chapter": ".chapter-menu",
+    "/c/add-chapter": ".chapter-menu",
+    "/c/edit-chapter": ".chapter-menu",
+    "/c/view-chapter": ".chapter-menu",
+    "/u/manage-universal-links": ".universal-menu",
+    "/u/edit-universal-link": ".universal-menu",
+    "/m/manage-members": ".member-menu",
+    "/m/add-member": ".member-menu",
+    "/m/edit-member": ".member-menu",
+    "/m/view-member": ".member-menu",
+    "/t/all-transactions": ".transaction-menu",
+    "/acc/manage-accolades": ".accolade-menu",
+    "/acc/add-accolades": ".accolade-menu",
+    "/acc/edit-accolades": ".accolade-menu",
+  };
+
+  // Mark the active menu and open its dropdown
+  if (menuMapping[currentPath]) {
+    const parentMenu = document.querySelector(menuMapping[currentPath]);
+    const childLink = document.querySelector(`a[href="${currentPath}"]`);
+    if (parentMenu) {
+      parentMenu.classList.add("active"); // Add active class to parent
+      parentMenu.nextElementSibling.classList.add("open"); // Open the dropdown
+    }
+    if (childLink) {
+      childLink.classList.add("active"); // Add active class to child link
+    }
+  }
+
+  // Sidebar toggle button functionality
+  const sidebarToggle = document.querySelector('.sidemenu-toggle');
+  sidebarToggle.addEventListener('click', () => {
+    const body = document.body;
+    const isSidebarHidden = body.classList.contains('sidebar-hidden');
+
+    if (isSidebarHidden) {
+      // Sidebar is being shown: reopen dropdown for active menu
+      const activeMenu = document.querySelector('.slide.has-sub.active');
+      if (activeMenu) {
+        activeMenu.nextElementSibling.classList.add('open'); // Reopen dropdown
+      }
+    } else {
+      // Sidebar is being hidden: close all dropdowns
+      document.querySelectorAll('.slide-menu.open').forEach(menu => {
+        menu.classList.remove('open');
+      });
+    }
+
+    // Toggle the sidebar-hidden state on the body
+    body.classList.toggle('sidebar-hidden');
+  });
+});
+
+      </script>
    
 
       
