--- a/public/view/partials/header.ejs
+++ b/public/view/partials/header.ejs
@@ -1289,7 +1289,7 @@
                   </div>
                 </li>
                 <li>
-                  <a class="dropdown-item d-flex align-items-center" href="#"
+                  <a class="dropdown-item d-flex align-items-center" href="/s/my-profile"
                     ><i
                       class="fe fe-user p-1 rounded-circle bg-primary-transparent me-2 fs-16"
                     ></i
@@ -1306,7 +1306,7 @@
                 </li> -->
 
                 <li>
-                  <a class="dropdown-item d-flex align-items-center" href="#"
+                  <a class="dropdown-item d-flex align-items-center" href="/s/settings"
                     ><i
                       class="fe fe-settings p-1 rounded-circle bg-primary-transparent ings me-2 fs-16"
                     ></i
