Routes + controllers + page for classifications

--- a/public/view/m-accolade/add-accolades.ejs
+++ b/public/view/m-accolade/add-accolades.ejs
@@ -16,7 +16,7 @@
             <div>
               <h1 class="page-title fw-medium fs-18 mb-0">
                 <span style="font-weight: 700; font-family: Poppins"
-                  >Add New Chapter</span
+                  >Add New Accolade</span
                 >
               </h1>
               <!-- <p>Manage kitty payments with just one click</p> -->
