--- a/public/view/m-classifications/manage-classifications.ejs
+++ b/public/view/m-classifications/manage-classifications.ejs
@@ -18,22 +18,21 @@
                 <ol class="breadcrumb mb-1">
                   <li class="breadcrumb-item">
                     <a href="javascript:void(0);" style="color: #d01f2f"
-                      >Accolades Information</a
+                      >Classifications Information</a
                     >
                   </li>
                   <li class="breadcrumb-item Approved" aria-current="page">
-                    View All Accolades
+                    View All Classifications
                   </li>
                 </ol>
               </nav>
               <h1 class="page-title fw-medium fs-18 mb-0">
-                Manage Accolades
+                Manage Classifications
               </h1>
             </div>
             <div class="btn-list">
               <button class="btn btn-white btn-wave" style="background-color: gainsboro !important; border-radius: 10px;">
-                </i> Total In Stock
-                Accolades <br />
+                </i> Total Classifications <br />
                <span> <b>50</b></span> 
               </button>
               <button class="btn btn-danger btn-wave me-0">
@@ -46,56 +45,15 @@
           <!-- Start::row-1 -->
           <div class="card custom-card" style="background-color: gainsboro">
             <div class="card-header justify-content-between">
-              <div class="card-title">All Accolades List</div>
+              <div class="card-title">All Classifications List</div>
               <div class="d-flex gap-3 align-items-center flex-wrap">
                 <div class="btn-group">
-                  <button
-                    class="btn btn-outline-light border dropdown-toggle"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    <i class="ti ti-sort-descending-2 me-1"></i> Region
-                  </button>
-
-                  <button
-                    class="btn btn-outline-light border dropdown-toggle"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    <i class="ti ti-sort-descending-2 me-1"></i> Chapter
-                  </button>
-                  <button
-                    class="btn btn-outline-light border dropdown-toggle"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    <i class="ti ti-sort-descending-2 me-1"></i> Member
-                  </button>
-                  <button
-                    class="btn btn-outline-light border dropdown-toggle"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    <i class="ti ti-sort-descending-2 me-1"></i> Filter
-                  </button>
-                 <a href="/acc/add-accolades"><button
-                  class="btn btn-outline-light border"
-                  type="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  + Add Accolades
-                </button></a> 
                 </div>
                 <div class="custom-form-group flex-grow-1">
                   <input
                     type="text"
                     class="form-control"
-                    placeholder="Search Supply.."
+                    placeholder="Search Classification.."
                     aria-label="Recipient's username"
                     aria-describedby="button-addon2"
                   />
@@ -116,12 +74,12 @@
                   <thead>
                     <tr>
                       <th scope="col">S.No.</th>
-                      <th scope="col">Accolades Name</th>
-                      <th scope="col">Added by</th>
+                      <th scope="col">Classification Name</th>
+                      <th scope="col">Published by</th>
                     
-                      <th scope="col">Stock Available</th>
-                      <th scope="col">Stock In Date</th>
-                      <th scope="col">Status</th>
+                      <th scope="col">Classification Industry</th>
+                      <th scope="col">Published Date</th>
+                      <th scope="col">Vacancy Availability</th>
                     </tr>
                   </thead>
                   
@@ -134,7 +92,7 @@
                             <p
                               class="fw-semibold mb-0 d-flex align-items-center"
                             >
-                              <a href="">Induction Kit</a>
+                              <a href="">Ticketing</a>
                             </p>
                           </div>
                         </div>
@@ -152,21 +110,16 @@
                       </td>
                       <td>
                         <div class="d-flex align-items-center text-center">
-                          50
+                            Travel
                         </div>
                       </td>
                       
                       <td class="fw-semibold">11 Jan 2024</td>
                       <td>
                         <span class="badge bg-danger-transparent"
-                          >Out Of Stock</span
+                          > Not Available</span
                         >
-                        <a
-                          href="
-                          class="btn btn-icon btn-sm btn-primary-light btn-wave waves-effect waves-light"
-                        >
-                          <i class="ri-eye-line"></i>
-                        </a>
+                          
                       </td>
                     </tr>
                     <tr class="order-list">
@@ -177,7 +130,7 @@
                             <p
                               class="fw-semibold mb-0 d-flex align-items-center text-center"
                             >
-                              <a href="">Black Badge</a>
+                              <a href="">Tours/Tour Guide</a>
                             </p>
                           </div>
                         </div>
@@ -195,18 +148,13 @@
                       </td>
                       <td>
                         <div class="d-flex align-items-center text-center">
-                          70
+                          Travel
                         </div>
                       </td>
                       <td class="fw-semibold">11 Jan 2024</td>
                       <td>
-                        <span class="badge bg-success-transparent">In Stock</span>
-                        <a
-                          href=""
-                          class="btn btn-icon btn-sm btn-primary-light btn-wave waves-effect waves-light"
-                        >
-                          <i class="ri-eye-line"></i>
-                        </a>
+                        <span class="badge bg-success-transparent">Available</span>
+                        
                       </td>
                     </tr>
                     <tr class="order-list">
@@ -217,7 +165,7 @@
                             <p
                               class="fw-semibold mb-0 d-flex align-items-center text-center"
                             >
-                              <a href="">BNI Diary</a>
+                              <a href="">Marketing Consultant</a>
                             </p>
                           </div>
                         </div>
@@ -235,18 +183,15 @@
                       </td>
                       <td>
                         <div class="d-flex align-items-center text-center">
-                         100
+                            Consulting
                         </div>
                       </td>
 
                       <td class="fw-semibold">11 Jan 2024</td>
                       <td>
-                        <span class="badge bg-success-transparent">In Stock</span>
-                        <a
-                          href=""
-                          class="btn btn-icon btn-sm btn-primary-light btn-wave waves-effect waves-light"
-                        >
-                          <i class="ri-eye-line"></i>
+                        <span class="badge bg-success-transparent">Available</span>
+                       
+                           
                         </a>
                       </td>
                     </tr>
@@ -258,7 +203,7 @@
                             <p
                               class="fw-semibold mb-0 d-flex align-items-center text-center"
                             >
-                              <a href="">Name Badge</a>
+                              <a href="">Uniforms</a>
                             </p>
                           </div>
                         </div>
@@ -276,20 +221,15 @@
                       </td>
                       <td>
                         <div class="d-flex align-items-center text-center">
-                         20
+                            Retail
                         </div>
                       </td>
                       <td class="fw-semibold">11 Jan 2024</td>
                       <td>
                         <span class="badge bg-danger-transparent"
-                          >Out Of Stock</span
+                          > Not Available</span
                         >
-                        <a
-                          href=""
-                          class="btn btn-icon btn-sm btn-primary-light btn-wave waves-effect waves-light"
-                        >
-                          <i class="ri-eye-line"></i>
-                        </a>
+                       
                       </td>
                     </tr>
                     <tr class="order-list">
@@ -300,7 +240,7 @@
                             <p
                               class="fw-semibold mb-0 d-flex align-items-center"
                             >
-                              <a href=""> Signage</a>
+                              <a href=""> Tiles</a>
                             </p>
                           </div>
                         </div>
@@ -318,17 +258,14 @@
                       </td>
                       <td>
                         <div class="d-flex align-items-center">
-                        40
+                            Construction
                         </div>
                       </td>
                       <td class="fw-semibold">11 Jan 2024</td>
                       <td>
-                        <span class="badge bg-success-transparent">In Stock</span>
-                        <a
-                          href=""
-                          class="btn btn-icon btn-sm btn-primary-light btn-wave waves-effect waves-light"
-                        >
-                          <i class="ri-eye-line"></i>
+                        <span class="badge bg-success-transparent">Available</span>
+                       
+                           
                         </a>
                       </td>
                     </tr>
@@ -340,7 +277,7 @@
                             <p
                               class="fw-semibold mb-0 d-flex align-items-center"
                             >
-                              <a href="">Goal Board</a>
+                              <a href="">Custom Clothing/Tailor</a>
                             </p>
                           </div>
                         </div>
@@ -358,20 +295,15 @@
                       </td>
                       <td>
                         <div class="d-flex align-items-center">
-                        25
+                            Retail
                         </div>
                       </td>
                       <td class="fw-semibold">11 Jan 2024</td>
                       <td>
                         <span class="badge bg-danger-transparent"
-                          >Out Of Stock</span
+                          > Not Available</span
                         >
-                        <a
-                          href=""
-                          class="btn btn-icon btn-sm btn-primary-light btn-wave waves-effect waves-light"
-                        >
-                          <i class="ri-eye-line"></i>
-                        </a>
+                      
                       </td>
                     </tr>
                     <tr class="order-list">
@@ -382,7 +314,7 @@
                             <p
                               class="fw-semibold mb-0 d-flex align-items-center"
                             >
-                              <a href="">Invition Card</a>
+                              <a href="">Gold Jewellery - Retail</a>
                             </p>
                           </div>
                         </div>
@@ -400,18 +332,15 @@
                       </td>
                       <td>
                         <div class="d-flex align-items-center">
-                        45
+                            Retail
                         </div>
                       </td>
                       <td class="fw-semibold">11 Jan 2024</td>
                       <td>
-                        <span class="badge bg-warning-transparent">In Transit</span>
-                        <a
-                          href=""
-                          class="btn btn-icon btn-sm btn-primary-light btn-wave waves-effect waves-light"
+                        <span class="badge bg-danger-transparent"
+                          > Not Available</span
                         >
-                          <i class="ri-eye-line"></i>
-                        </a>
+                       
                       </td>
                     </tr>
                   </tbody>
@@ -431,18 +360,6 @@
                     </li>
                     <li class="page-item Approved" aria-current="page">
                       <a class="page-link" href="javascript:void(0)">1</a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link" href="javascript:void(0)">2</a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link" href="javascript:void(0)">3</a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link" href="javascript:void(0)">4</a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link" href="javascript:void(0)">5</a>
                     </li>
                     <li class="page-item">
                       <a class="page-link" href="javascript:void(0)">Next</a>
