--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -290,6 +290,44 @@
                                                           </li>
                                                           <!-- End::slide -->
 
+                                                           <!-- Start::slide -->
+                                                           <li class="slide has-sub">
+                                                            <a href="javascript:void(0);" class="side-menu__item classification-menu">
+                                                              <svg
+                                                              xmlns="http://www.w3.org/2000/svg"
+                                                              class="w-6 h-6 side-menu__icon"
+                                                              fill="none"
+                                                              viewbox="0 0 24 24"
+                                                              stroke-width="1.5"
+                                                              stroke="currentColor"
+                                                            >
+                                                              <path
+                                                                stroke-linecap="round"
+                                                                stroke-linejoin="round"
+                                                                d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 0 0 2.25-2.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v2.25A2.25 2.25 0 0 0 6 10.5Zm0 9.75h2.25A2.25 2.25 0 0 0 10.5 18v-2.25a2.25 2.25 0 0 0-2.25-2.25H6a2.25 2.25 0 0 0-2.25 2.25V18A2.25 2.25 0 0 0 6 20.25Zm9.75-9.75H18a2.25 2.25 0 0 0 2.25-2.25V6A2.25 2.25 0 0 0 18 3.75h-2.25A2.25 2.25 0 0 0 13.5 6v2.25a2.25 2.25 0 0 0 2.25 2.25Z"
+                                                              ></path>
+                                                            </svg>
+                                                              <span class="side-menu__label"
+                                                                >Classification <br />
+                                                                Management</span
+                                                              >
+                                                              <i class="ri-arrow-down-s-line side-menu__angle"></i>
+                                                            </a>
+                                                            <ul class="slide-menu child1">
+                                                              <li class="slide">
+                                                                <a href="/cl/manage-classifications" class="side-menu__item"
+                                                                  >View All Classifications</a
+                                                                >
+                                                              </li>
+                                                              <li class="slide">
+                                                                <a href="/cl/add-classification" class="side-menu__item"
+                                                                  >Add New Classification</a
+                                                                >
+                                                              </li>
+                                                            </ul>
+                                                          </li>
+                                                          <!-- End::slide -->
+
               <!-- Start::slide -->
               <li class="slide has-sub">
                 <a href="javascript:void(0);" class="side-menu__item supplies-menu">
@@ -622,6 +660,10 @@
     "/acc/manage-accolades": ".accolade-menu",
     "/acc/add-accolades": ".accolade-menu",
     "/acc/edit-accolades": ".accolade-menu",
+    "/acc/edit-accolades": ".accolade-menu",
+    "/acc/edit-accolades": ".accolade-menu",
+    "/cl/manage-classifications": ".classification-menu",
+    "/cl/add-classification": ".classification-menu",
   };
 
   // Mark the active menu and open its dropdown
